# ial-hw-1

./: .gitignore  CMakeLists.txt
src/c202/: c202.c
src/c204/: c204.c
src/c206/: c206.c
